defaults and static methods